<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".FilmDetailsActivity">

    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="170dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="bottom|center_horizontal"
            android:text="@string/cinema_name"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/filmDetailsActivityEditTextCinemaName"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:enabled="false"
            android:ems="10"
            android:inputType="textPersonName" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="170dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:gravity="bottom|center_horizontal"
            android:text="@string/cinema_type"
            android:textSize="16sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/filmDetailsActivitySpinnerType"
            android:layout_width="180dp"
            android:layout_height="40dp"
            android:enabled="false"
            android:layout_weight="1" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="170dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="bottom|center_horizontal"
            android:text="@string/product_year"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/filmDetailsActivityEditTextProductYear"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:enabled="false"
            android:ems="10"
            android:inputType="textPersonName" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="170dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="bottom|center_horizontal"
            android:text="@string/director"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/filmDetailsActivityEditTextDirector"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:enabled="false"
            android:ems="10"
            android:inputType="textPersonName" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="170dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="bottom|center_horizontal"
            android:text="@string/product_company"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/filmDetailsActivityEditTextProductCompany"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:enabled="false"
            android:ems="10"
            android:inputType="textPersonName" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:orientation="horizontal">


        <Switch
            android:id="@+id/filmDetailsActivitySwitchEditing"
            android:layout_width="350dp"
            android:layout_height="match_parent"
            android:text="@string/switch_update" />

    </LinearLayout>

    <Button
        android:id="@+id/filmDetailsActivityButtonUpdate"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:text="@string/button_update" />


</LinearLayout>