<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/mainActivityTextViewName"
            android:layout_width="170dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="bottom|center_horizontal"
            android:text="@string/cinema_name"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/mainActivityEditTextCinemaName"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/mainActivityTextViewType"
            android:layout_width="170dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:gravity="bottom|center_horizontal"
            android:text="@string/cinema_type"
            android:textSize="16sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/mainActivitySpinnerType"
            android:layout_width="180dp"
            android:layout_height="40dp"
            android:layout_weight="1" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/mainActivityTextViewProductYear"
            android:layout_width="170dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="bottom|center_horizontal"
            android:text="@string/product_year"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/mainActivityEditTextProductYear"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/mainActivityTextViewDirector"
            android:layout_width="170dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="bottom|center_horizontal"
            android:text="@string/director"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/mainActivityEditTextDirector"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/mainActivityTextViewProductCompany"
            android:layout_width="170dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="bottom|center_horizontal"
            android:text="@string/product_company"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/mainActivityEditTextProductCompany"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/mainActivityButtonAdd"
            android:layout_width="50dp"
            android:layout_height="45dp"
            android:layout_weight="1"
            android:gravity="bottom|center_horizontal"
            android:text="@string/button_add"
            android:textColor="@color/black"
            android:backgroundTint="@color/teal_200"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:ignore="ExtraText" />

        <Button
            android:id="@+id/mainActivityButtonList"
            android:layout_width="40dp"
            android:layout_height="45dp"
            android:layout_weight="1"
            android:gravity="bottom|center_horizontal"
            android:text="@string/button_list"
            android:textColor="@color/black"
            android:backgroundTint="@color/teal_200"
            android:textSize="16sp"
            android:textStyle="bold" />


    </LinearLayout>




</LinearLayout>